--- a/Layout.html
+++ b/Layout.html
@@ -15,14 +15,14 @@
   <h1 id="logo">
        Review Page
   </h1>
-
+  
 	<nav>
 		<a href="index.html">Home</a>
 		<a href="Animation.html">Animations</a>
 		<a href="Layout.html">Layouts</a>
 		<a href=".html"></a>
 	</nav>
- 
+  <h1>12 Span Grid</h1>
   <section class="layout">
   <div class="span12">1</div>
   <div class="span6">2</div>
@@ -30,7 +30,7 @@
   <div class="span1">4</div>
 </section>
 
-  
+  <h2>3x3 Grid</h2>
 <section class="layout2">
   <div>1</div>
   <div>2</div>
@@ -43,6 +43,7 @@
   <div>9</div>
 </section>
 
+  <h2>Holy Grail</h2>
 <section class="layout3">
   <div class="header">1</div>
   <div class="leftSide">2</div>
@@ -51,16 +52,20 @@
   <div class="footer">5</div>
 </section>
 
+  <h2>Sidebar</h2>
 <section class="layout4">
   <div class="sidebar">1</div>
-  <div class="body">2</div>
+  <div class="body2">2</div>
 </section>
 
+  <h2>Header Main Footer</h2>
 <section class="layout5">
-  <div class="header">1</div>
+  <div class="header2">1</div>
   <div class="main">2</div>
-  <div class="footer">3</div>
+  <div class="footer2">3</div>
 </section>
+
+  <h2>Infinte Rows</h2>
 <section class="layout6">
   <div>1</div>
   <div>2</div>
@@ -75,7 +80,8 @@
   <div>11</div>
   <div>12</div>
 </section>
-  
+
+  <h2>Infinite Rows with Area</h2>
   <section class="layout7">
   <div>1</div>
   <div class="col1Last1">2</div>
