Updated animation.html, layout.html, and style.css .

--- a/Layout.html
+++ b/Layout.html
@@ -32,15 +32,15 @@
 
   <h2>3x3 Grid</h2>
 <section class="layout2">
-  <div>1</div>
-  <div>2</div>
-  <div>3</div>
-  <div>4</div>
-  <div>5</div>
-  <div>6</div>
-  <div>7</div>
-  <div>8</div>
-  <div>9</div>
+  <div class="x3">1</div>
+  <div class="x3">2</div>
+  <div class="x3">3</div>
+  <div class="x3">4</div>
+  <div class="x3">5</div>
+  <div class="x3">6</div>
+  <div class="x3">7</div>
+  <div class="x3">8</div>
+  <div class="x3">9</div>
 </section>
 
   <h2>Holy Grail</h2>
@@ -67,35 +67,38 @@
 
   <h2>Infinte Rows</h2>
 <section class="layout6">
-  <div>1</div>
-  <div>2</div>
-  <div>3</div>
-  <div>4</div>
-  <div>5</div>
-  <div>6</div>
-  <div>7</div>
-  <div>8</div>
-  <div>9</div>
-  <div>10</div>
-  <div>11</div>
-  <div>12</div>
+  <div class="infy">1</div>
+  <div class="infy">2</div>
+  <div class="infy">3</div>
+  <div class="infy">4</div>
+  <div class="infy">5</div>
+  <div class="infy">6</div>
+  <div class="infy">7</div>
+  <div class="infy">8</div>
+  <div class="infy">9</div>
+  <div class="infy">10</div>
+  <div class="infy">11</div>
+  <div class="infy">12</div>
 </section>
 
   <h2>Infinite Rows with Area</h2>
   <section class="layout7">
-  <div>1</div>
+  <div class="x3">1</div>
   <div class="col1Last1">2</div>
   <div class="col1Last1">3</div>
-  <div>4</div>
+  <div class="x3">4</div>
   <div class="col1Last1">5</div>
   <div class="col1Last1">6</div>
 </section>
+
+  <h2>Flexbox Rows</h2>
   <section class="layout8">
-  <div>1</div>
-  <div>2</div>
-  <div>3</div>
+  <div class="flRow">1 text text text</div>
+  <div class="flRow">2</div>
+  <div class="flRow">3</div>
 </section>
 
+  <h2>Flex ROW Wrap</h2>
 <section class="layout9">
   <div>1</div>
   <div>2</div>
@@ -110,30 +113,32 @@
   <div>11</div>
 </section>
 
+  <h2>Flexbox Fitting the Space</h2>
 <section class="layout10">
   <div class="grow1">1</div>
   <div class="grow1">2</div>
   <div class="grow1">3</div>
 </section>
 
+  <h2>Flexbox Fit to Remaing Space</h2>
   <section class="layout11">
-  <div>1</div>
-  <div>2</div>
+  <div class="flRow">1TEXT</div>
+  <div class="flRow">2</div>
   <div class="grow1">3</div>
 </section>
 
+  <h2>Flexbox Seperate</h2>
 <section class="layout12">
-  <div>1</div>
-  <div>2</div>
-  <div class="grow1">3</div>
+  <div>1TEXT</div>
+  <div>2 LOL</div>
+  <div class="marginLeft">3 3 other content</div>
 </section>
 
+  <h2>My Layout</h2>
 <section class="layout13">
   <div>1</div>
   <div>2</div>
   <div class="marginLeft">3</div>
 </section>
-  
-	</body>
-
+</body>
 </html>
